--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,4 +1,5 @@
-name: "Terraform"
+---
+name: Terraform
 
 on:
   push:
@@ -8,7 +9,7 @@ on:
 
 jobs:
   terraform:
-    name: "Terraform"
+    name: Terraform
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -22,20 +23,20 @@ jobs:
 
       - name: Terraform Format
         id: fmt
-        run: terraform fmt -check
+        run: cd dev/ && terraform fmt -check
 
       - name: Terraform Init
         id: init
-        run: terraform init
-      
+        run: cd dev/ && terraform init
+
       - name: Terraform Validate
         id: validate
-        run: terraform validate -no-color
+        run: cd dev/ && terraform validate -no-color
 
       - name: Terraform Plan
         id: plan
         if: github.event_name == 'pull_request'
-        run: terraform plan -no-color
+        run: cd dev/ && terraform plan -no-color
         continue-on-error: true
 
       - uses: actions/github-script@0.9.0
@@ -61,6 +62,7 @@ jobs:
               repo: context.repo.repo,
               body: output
             })
+
       - name: Terraform Plan Status
         if: steps.plan.outcome == 'failure'
         run: exit 1
